# heartbeat

./: README.md  pyproject.toml
dev/experiment/: base_experiment.py
dev/gather_info/: readfile.py
journal/2025/01/: 31.txt
reports/: report.txt  report_updated.md
src/experiments/baseline_cnn/: README.md  config.py  train.py
src/experiments/baseline_cnn/mlruns/1/cdf480057573453494be4067f6887cbe/artifacts/: classification_report.txt
src/experiments/hypertuning/: tunable_cnn.py  tune_cnn.py  tune_enhanced_cnn.py  visualize.py
src/experiments/resnet_cnn/: README.md  config.py  train.py
src/heartbeat/data/: prep_data.py
src/heartbeat/evaluation/: metrics.py
src/heartbeat/mlflow/: server.py
src/heartbeat/models/cnn/: baseline.py  enhanced_cnn.py
src/heartbeat/models/resnet/: dualpath_attention_resnet.py  model.py
src/heartbeat/train/: train_dualpath_attention_resnet.py  train_enhanced_cnn.py
src/heartbeat/train/models/testmodels/: test_dualpath_attention_resnet.py
src/heartbeat/visualizations/: plotting.py
