[project]
name = "heartbeat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joppe", email = "joppe.montezinos@gmail.com" }
]
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pq>=1.9.1",
    "pyarrow<19.0.0",
    "notebook>=7.3.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.0",
    "jrnl>=4.2",
    "mads-datasets>=0.3.14",
    "mltrainer>=0.1.129",
    "pip>=25.0",
    "mlflow>=2.20.1",
    "psutil>=6.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/heartbeat"]
